--- a/Angular-Test-Two/src/app/student/student-main/student-main.component.html
+++ b/Angular-Test-Two/src/app/student/student-main/student-main.component.html
@@ -1,8 +1,8 @@
-<app-student-list (studentDetailInfo)="showData($event)"></app-student-list>
+<app-student-list (oneStudentDetail)="showStudentDetails($event)"></app-student-list>
 
 <app-student-details *ngIf="showStudent">
-   Name : {{ studentInfo.gender | prependName }} {{ studentInfo.firstName  + " " + studentInfo.lastName | uppercase}} <br>
-   City : {{ studentInfo.city }}<br>
-   Institute : {{ studentInfo.institute }}<br>
-   Description : {{ studentInfo.description }}
+   Name : {{ studentDetails.gender | prependName }} {{ studentDetails.firstName  + " " + studentDetails.lastName | uppercase}} <br>
+   City : {{ studentDetails.city }}<br>
+   Institute : {{ studentDetails.institute }}<br>
+   Description : {{ studentDetails.description }}
 </app-student-details>
