--- a/Angular-Test-Two/src/app/app.component.html
+++ b/Angular-Test-Two/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Current Date : {{ currentDate | date:'MMM d, y '}}</h1>
-<h1>Project Version : {{ projectVersion }}</h1>
+<h1 class="text-center">Current Date : {{ currentDate | date:'MMM d, y '}}</h1>
+<h1 class="text-center">Project version : {{ projectVersion }}</h1>
 
 <app-student-main></app-student-main>
 
