--- a/Angular-Test-Two/src/app/student/student-main/student-list/student-info/student-info.component.html
+++ b/Angular-Test-Two/src/app/student/student-main/student-list/student-info/student-info.component.html
@@ -16,31 +16,28 @@
     <tbody>
       <!-- loop for show list of students in table -->
       <tr
-        *ngFor="let data of students; let i = index"
-        [ngClass]="data.gender == 'Male' ? 'male' : 'female'"
+        [ngClass]="studentsDetail.gender == 'Male' ? 'male' : 'female'"
         [ngStyle]="{
-          'background-color': data.gender == 'Male' ? 'lightblue' : 'lightpink'
+          'background-color': studentsDetail.gender == 'Male' ? 'lightblue' : 'lightpink'
         }"
       >
-        <td>{{ data.firstName }}</td>
-        <td>{{ data.lastName }}</td>
+        <td>{{ studentsDetail.firstName }}</td>
+        <td>{{ studentsDetail.lastName }}</td>
         <!-- directives for styling gender colomn -->
         <td>
-          {{ data.gender }}
+          {{ studentsDetail.gender }}
         </td>
-        <td>{{ data.institute }}</td>
-        <td>{{ data.city }}</td>
+        <td>{{ studentsDetail.institute }}</td>
+        <td>{{ studentsDetail.city }}</td>
         <!-- button for show particlar student details -->
         <td>
-          <button class="btn btn-primary" (click)="showStudentDetails(i)">
+          <button class="btn btn-primary" (click)="showStudentDetails()">
             Info
           </button>
         </td>
         <!-- delete button to delete particular student details -->
         <td>
-          <button class="btn btn-primary" (click)="deleteStudent(i)">
-            Delete
-          </button>
+          <ng-content></ng-content>
         </td>
       </tr>
     </tbody>
