--- a/test-project/src/app/notes/list-notes/list-notes.component.html
+++ b/test-project/src/app/notes/list-notes/list-notes.component.html
@@ -9,10 +9,10 @@
   >
     <div class="card-body">
       <h4 class="card-title">{{ note.title }}</h4>
-      <h6 class="card-subtitle">{{ note.date }}</h6>
+      <h6 class="card-subtitle">{{ note.date | date:'short' }}</h6>
       <p class="card-text">{{ note.note }}</p>
-      <button (click)="deleteNote(note)" class="btn btn-primary">Delete</button>
       <button (click)="editNote(note)" class="btn btn-primary">Edit</button>
+      <button (click)="deleteNote(note)" class="btn btn-primary" *ngIf="!note.status">Delete</button>
     </div>
   </div>
 </div>
