--- a/test-project/src/app/notes/list-notes/add-notes/add-notes.component.html
+++ b/test-project/src/app/notes/list-notes/add-notes/add-notes.component.html
@@ -15,7 +15,7 @@
           class="form-control"
           name="title"
           maxlength="100"
-          placeholder="Tite"
+          placeholder="Title"
         />
         <!-- validation -->
         <div
@@ -103,6 +103,6 @@
       {{ getNoteForEdit ? "Edit" : "Add" }}
     </button>
     <!-- to clear form -->
-    <button class="btn btn-primary col-2" (click)="clearForm()">Clear Note</button>
+    <button class="btn btn-danger col-2" (click)="clearForm()">Clear Note</button>
   </form>
 </div>
