--- a/test-project/src/app/notes/list-notes/list-notes.component.html
+++ b/test-project/src/app/notes/list-notes/list-notes.component.html
@@ -14,7 +14,7 @@
       <h6 class="card-subtitle">{{ note.date | date:'short' }}</h6>
       <p class="card-text">{{ note.note }}</p>
       <button (click)="editNote(note)" class="btn btn-primary">Edit</button>
-      <button (click)="deleteNote(note)" class="btn btn-primary" *ngIf="!note.status">Delete</button>
+      <button (click)="deleteNote(note)" class="btn btn-danger" *ngIf="!note.status">Delete</button>
     </div>
   </div>
 </div>
