upadted changes in project

--- a/HRMS/src/app/app.component.html
+++ b/HRMS/src/app/app.component.html
@@ -1,2 +1,11 @@
+<!-- to show master in card -->
+<div class="row">
+  <div class="col-6 text-center">
+    <app-designation-add></app-designation-add>
+  </div>
+  <div class="col-6 text-center">
+    <app-external-designation-add></app-external-designation-add>
+  </div>
+</div>
 
-<app-master-main></app-master-main>
+<ngx-ui-loader></ngx-ui-loader>
