--- a/HRMS/src/app/modules/master/designation/designation-add/designation-add.component.html
+++ b/HRMS/src/app/modules/master/designation/designation-add/designation-add.component.html
@@ -34,15 +34,16 @@
       </div>
 
       <!-- status  -->
-      <div class="form-check me-2 mt-2">
+      <div class="form-check form-switch me-2 mt-2">
         <input type="checkbox" formControlName="status" class="form-check-input" id="checkBoxStatus" /> 
+        
         <label for="checkBoxStatus">Status</label>
       </div>
 
       <!-- edit or save button -->
       <div class="input-group-append">
         <button class="btn btn-primary" (click)="onSubmit()">
-          {{ editDesignationId ? "Edit" : "Save" }}
+          {{ editDesignationId ? "Edit" : "Add" }}
         </button>
       </div>
     </div>
