--- a/HRMS/src/styles.css
+++ b/HRMS/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~bootstrap4-toggle/css/bootstrap4-toggle.min.css';
 @import '~ngx-toastr/toastr';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 html, body { height: 100%; }
