--- a/HRMS/src/app/modules/master/designation/designation-add/designation-add.component.html
+++ b/HRMS/src/app/modules/master/designation/designation-add/designation-add.component.html
@@ -13,7 +13,7 @@
         />
 
         <!-- validation  -->
-        <small
+        <small class="text-danger"
           *ngIf="
             (isFormSubmitted ||
               _addDesignationForm['designationTitle'].touched) &&
@@ -21,12 +21,14 @@
           "
         >
           <small
-            class="alert-danger"
             *ngIf="_addDesignationForm['designationTitle']?.errors?.['required']"
             >Designation is required</small
           >
           <small
-            class="alert-danger"
+            *ngIf="_addDesignationForm['designationTitle']?.errors?.['maxlength']"
+            >Designation is allow 256 char</small
+          >
+          <small
             *ngIf="_addDesignationForm['designationTitle'].errors?.['uniqueTitle']"
             >Designation must be unique
           </small>
