--- a/HRMS/src/app/modules/master/external-designation/external-designation-add/external-designation-add.component.html
+++ b/HRMS/src/app/modules/master/external-designation/external-designation-add/external-designation-add.component.html
@@ -14,7 +14,7 @@
 
       <!-- validation -->
       <small
-        class="alert-danger"
+        class="text-danger"
         *ngIf="
           (_addExternalDesignationForm['title'].touched || isSubmittedForm) &&
           _addExternalDesignationForm['title'].invalid
@@ -22,6 +22,9 @@
       >
         <small *ngIf="_addExternalDesignationForm['title'].errors?.['required']"
           >External designation is required</small
+        >
+        <small *ngIf="_addExternalDesignationForm['title'].errors?.['maxlength']"
+          >External designation is allow 256 char</small
         >
         <small
           *ngIf="_addExternalDesignationForm['title'].errors?.['uniqueTitle']"
