--- a/HRMS/src/app/modules/master/external-designation/external-designation-add/external-designation-list/external-designation-list.component.html
+++ b/HRMS/src/app/modules/master/external-designation/external-designation-add/external-designation-list/external-designation-list.component.html
@@ -1,5 +1,22 @@
 <div class="container">
   <!-- externalDesignation list table -->
+  <h3 class="text-center">
+    Designation List
+    <span class="form-switch mt-2"
+      ><h1><fa-icon
+        *ngIf="isStatus"
+        (click)="isStatus = false"
+        class="blue-color"
+        [icon]="faToggleOn"
+      ></fa-icon>
+      <fa-icon
+        *ngIf="!isStatus"
+        (click)="isStatus = true"
+        class="blue-color"
+        [icon]="faToggleOff"
+      ></fa-icon></h1>
+    </span>
+  </h3>
   <table class="table">
     <thead>
       <tr>
@@ -12,16 +29,16 @@
       <tr *ngIf="!_externalDesignationService.externalDesignations || isNoData">
         <td colspan="3" class="text-center">Data not found</td>
       </tr>
-
     </thead>
 
     <!-- loop for designation list in table -->
     <tbody
       *ngFor="
         let designation of _externalDesignationService.externalDesignations
+        | paginate: { itemsPerPage: rowPerPage, currentPage: p }
       "
     >
-      <tr>
+      <tr *ngIf="isStatus == designation.status">
         <td>{{ designation.title }}</td>
         <td>
           <h1>
@@ -58,4 +75,11 @@
       </tr>
     </tbody>
   </table>
+  <div class="input-group justify-content-end" *ngIf="_externalDesignationService.externalDesignations && !isNoData">
+    <select class="custom-select mb-3" (change)="SetRowPerPage($event)">
+      <option value="4">4</option>
+      <option value="8">8</option>
+    </select>
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
 </div>
