--- a/practice project/firebase-practice-project/src/app/app.component.html
+++ b/practice project/firebase-practice-project/src/app/app.component.html
@@ -1,5 +1,7 @@
+<app-nav></app-nav>
+
 <h1>Firebase Practice Project</h1>
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
-<app-regitser></app-regitser>
+<!-- <app-regitser></app-regitser> -->
